--- a/src/pages/Courses/Pages/NavPages/style.module.scss
+++ b/src/pages/Courses/Pages/NavPages/style.module.scss
@@ -280,6 +280,12 @@ $color: white;
                     flex-direction: column;
                     align-items: center;
 
+                    span {
+                        font-family: 'Contrail One', sans-serif;
+                        font-size: 34px;
+                        color: red;
+                    }
+
                     p {
                         font-family: 'Contrail One', sans-serif;
 
