--- a/src/pages/Courses/Pages/NavPages/style.module.scss
+++ b/src/pages/Courses/Pages/NavPages/style.module.scss
@@ -275,6 +275,12 @@ $color: white;
 
             // border: 2px solid red;
 
+            span {
+                font-family: 'Contrail One', sans-serif;
+                font-size: 34px;
+                color: red;
+            }
+
             figure {
                 display: flex;
                 align-items: center;
