--- a/src/pages/Courses/Pages/Contact/style.module.scss
+++ b/src/pages/Courses/Pages/Contact/style.module.scss
@@ -13,6 +13,10 @@
     h2 {
         margin-top: 40px;
         margin-bottom: 40px;
+
+        @media screen and (max-width:700px) {
+            margin-top: 140px;
+        }
     }
 
 
@@ -66,6 +70,12 @@
         //     input[type="submit"]:hover {
         //         background-color: #45a049;
         //     }
+
+        @media screen and (max-width:700px) {
+        
+
+            width: 300px;
+        }
 
     }
 }
